docs/pages/versions/v57.0.0/sdk/ui/drop-in-replacements/datetimepicker.mdx
---
title: DateTimePicker
description: A date and time picker compatible with @react-native-community/datetimepicker.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

A `DateTimePicker` component with an API compatible with `@react-native-community/datetimepicker`. It uses Jetpack Compose on Android and SwiftUI on iOS, providing a modern Material 3 and SwiftUI appearance by default (the community module defaults to the older look on Android).

`DateTimePicker` component is fully declarative. Use the `presentation` prop to render the picker `'inline'` directly in the view hierarchy or as a `'dialog'` on Android. There is no Android imperative API (`DateTimePickerAndroid.open()`).

Under the hood this component wraps the platform-specific `@expo/ui` primitives:

- **Android**: [Jetpack Compose DateTimePicker](../jetpack-compose/datetimepicker#datetimepicker) (inline), [DatePickerDialog/TimePickerDialog](../jetpack-compose/datetimepicker#datepickerdialog) (dialog)
- **iOS**: [SwiftUI DatePicker](../swift-ui/datepicker)

If you need lower-level control (custom modifiers, styles, or layouts), use those primitives directly.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/community-datetimepicker/android-light.webp',
    darkSrc: '/static/images/expo-ui/community-datetimepicker/android-dark.webp',
    alt: 'A Material 3 date picker dialog',
  }}
  ios={{
    src: '/static/images/expo-ui/community-datetimepicker/ios-light.webp',
    darkSrc: '/static/images/expo-ui/community-datetimepicker/ios-dark.webp',
    alt: 'A compact date field showing 21 Aug 2026',
  }}
/>

## Installation

<APIInstallSection />

## Migrating from `@react-native-community/datetimepicker`

- Update the import from `import DateTimePicker from '@react-native-community/datetimepicker'` to `import DateTimePicker from '@expo/ui/community/datetime-picker'`.
- There is no imperative `DateTimePickerAndroid.open()` API. Render the component and use `presentation="dialog"` instead.
- `minuteInterval`, `textColor`, `firstDayOfWeek`, `neutralButton`, `onNeutralButtonPress`, `fullscreen`, `title` and `startOnYearSelection` props are not supported.
- Use `timeZoneName` (IANA name) instead of `timeZoneOffsetInMinutes`.
- The `countdown` mode is not supported.
- `onError` prop is not needed.

## Basic usage

<ComponentExample
  title="DateTimePickerExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-basic-android-dark.webp',
    alt: 'A Material 3 date picker dialog for August 2026',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-basic-ios-dark.webp',
    alt: 'A compact date field showing 21 Aug 2026',
  }}>

```tsx
import { useState } from 'react';
import DateTimePicker from '@expo/ui/community/datetime-picker';

export default function DateTimePickerExample() {
  const [date, setDate] = useState(new Date());

  return (
    <DateTimePicker
      value={date}
      onValueChange={(event, selectedDate) => {
        setDate(selectedDate);
      }}
      mode="date"
    />
  );
}
```

</ComponentExample>

## Time picker

<ComponentExample
  title="TimePickerExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-time-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-time-android-dark.webp',
    alt: 'A Material 3 time picker dialog with a clock face',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-time-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-time-ios-dark.webp',
    alt: 'A compact time field',
  }}>

```tsx
import { useState } from 'react';
import DateTimePicker from '@expo/ui/community/datetime-picker';

export default function TimePickerExample() {
  const [date, setDate] = useState(new Date());

  return (
    <DateTimePicker
      value={date}
      onValueChange={(event, selectedDate) => {
        setDate(selectedDate);
      }}
      mode="time"
    />
  );
}
```

</ComponentExample>

## With date constraints

<ComponentExample
  title="ConstrainedDatePickerExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-constrained-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-constrained-android-dark.webp',
    alt: 'A date picker dialog with the dates before today greyed out',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-constrained-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-constrained-ios-dark.webp',
    alt: 'An open calendar with the dates outside the allowed range greyed out',
  }}>

```tsx
import { useState } from 'react';
import DateTimePicker from '@expo/ui/community/datetime-picker';

const today = new Date();
const thirtyDaysFromNow = new Date(today.getTime() + 30 * 24 * 60 * 60 * 1000);

export default function ConstrainedDatePickerExample() {
  const [date, setDate] = useState(new Date());

  return (
    <DateTimePicker
      value={date}
      onValueChange={(event, selectedDate) => {
        setDate(selectedDate);
      }}
      mode="date"
      minimumDate={today}
      maximumDate={thirtyDaysFromNow}
    />
  );
}
```

</ComponentExample>

## Dialog presentation

On Android, you can use `presentation="dialog"` to show the picker as a modal dialog. The dialog opens when the component mounts. Unmount it in response to `onValueChange` or `onDismiss`. On iOS, this prop is ignored and the picker always renders inline.

<ComponentExample
  title="AndroidDialogExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-dialog-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-dialog-android-dark.webp',
    alt: 'A date picker dialog opened by the Pick a date button',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-datetimepicker-dialog-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-datetimepicker-dialog-ios-dark.webp',
    alt: 'A Pick a date button above a compact date field',
  }}>

```tsx
import { useState } from 'react';
import { Button, View } from 'react-native';
import DateTimePicker from '@expo/ui/community/datetime-picker';

export default function AndroidDialogExample() {
  const [date, setDate] = useState(new Date());
  const [show, setShow] = useState(false);

  return (
    <View>
      <Button title="Pick a date" onPress={() => setShow(true)} />
      {show && (
        <DateTimePicker
          value={date}
          onValueChange={(event, selectedDate) => {
            setShow(false);
            setDate(selectedDate);
          }}
          onDismiss={() => {
            setShow(false);
          }}
          mode="date"
          presentation="dialog"
        />
      )}
    </View>
  );
}
```

</ComponentExample>

## API

```tsx
import DateTimePicker from '@expo/ui/community/datetime-picker';
```

<APISection packageName="expo-ui/community/datetime-picker" apiName="DateTimePicker" />

</PlatformTabsGroup>
